// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ShortcutsHelp > renders correctly in 'narrow' mode on 'linux' 1`] = `
"── Shortcuts (for more, see /help) ─────
 ! shell mode
 Shift+Tab cycle mode
 Ctrl+V paste images
 @ select file or folder
 Ctrl+Y YOLO mode
 Ctrl+R reverse-search history
 Esc Esc clear prompt / rewind
 Alt+M raw markdown mode
 Ctrl+X open external editor"
`;

exports[`ShortcutsHelp > renders correctly in 'narrow' mode on 'mac' 1`] = `
"── Shortcuts (for more, see /help) ─────
 ! shell mode
 Shift+Tab cycle mode
 Ctrl+V paste images
 @ select file or folder
 Ctrl+Y YOLO mode
 Ctrl+R reverse-search history
 Esc Esc clear prompt / rewind
 Option+M raw markdown mode
 Ctrl+X open external editor"
`;

exports[`ShortcutsHelp > renders correctly in 'wide' mode on 'linux' 1`] = `
"── Shortcuts (for more, see /help) ─────────────────────────────────────────────────────────────────
 ! shell mode                    Shift+Tab cycle mode            Ctrl+V paste images
 @ select file or folder         Ctrl+Y YOLO mode                Ctrl+R reverse-search history
 Esc Esc clear prompt / rewind   Alt+M raw markdown mode         Ctrl+X open external editor"
`;

exports[`ShortcutsHelp > renders correctly in 'wide' mode on 'mac' 1`] = `
"── Shortcuts (for more, see /help) ─────────────────────────────────────────────────────────────────
 ! shell mode                    Shift+Tab cycle mode            Ctrl+V paste images
 @ select file or folder         Ctrl+Y YOLO mode                Ctrl+R reverse-search history
 Esc Esc clear prompt / rewind   Option+M raw markdown mode      Ctrl+X open external editor"
`;
